--- a/index.ipynb
+++ b/index.ipynb
@@ -217,6 +217,7 @@
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
+    "    return\n",
     "    pass"
    ]
   },
