--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,7 @@
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    residual_sum_squares(x_values, y_values, m, b)\n",
+    "    rssv_values = listresidual_sum_squares(x_values, y_values, m, b)\n",
     "    return{'x_value':x_values, 'y_value':y_values, 'm_value': m_values, 'b':b, 'rss':rss_values}\n",
     "    pass"
    ]
