--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,7 @@
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
     "    rssv_values = list(map(lambda residual_sum_squares(x_values, y_values, m, b)\n",
-    "    return{'x_value':x_values, 'y_value':y_values, 'm_value': m_values, 'rss':rss_values}\n",
+    "    return{'x_value':x_values, 'y_value':y_values, 'm_value': [m_values], 'rss':[rss_values]}\n",
     "    pass"
    ]
   },
