Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -212,21 +212,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    rssv_values = list(map(lambda m_values: residual_sum_squares(x_values, y_values, m, b), m_values)\n",
+    "    rssv_values = list(map(lambda m_values: residual_sum_squares(x_values, y_values, m, b), m_values))\n",
     "    return{'m_values': [m_values], 'rss_values':[rss_values]}\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-7-4b60bc7c77b2>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-4b60bc7c77b2>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    scaled_m_values = list(map(lambda x_value: initial_m_value: initial_m_value/10,initial_m_values))\u001b[0m\n\u001b[0m                                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "budgets = list(map(lambda show: show['budget'] ,shows))\n",
     "revenues = list(map(lambda show: show['revenue'] ,shows))\n",
