--- a/index.ipynb
+++ b/index.ipynb
@@ -217,9 +217,7 @@
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    rss_value = list(map(lambda m_values: residual_sum_squares(x_values, y_values, m, b), m_values))\n",
-    "    return{'m_values': [m_values], 'rss_values':[rss_values]}\n",
-    "    pass"
+    "    for i in"
    ]
   },
   {
