--- a/index.ipynb
+++ b/index.ipynb
@@ -218,6 +218,7 @@
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
     "    for i in m_values\n",
+    "    residual_sum_squares(x_values, y_values, m, b)\n",
     "        "
    ]
   },
