--- a/index.ipynb
+++ b/index.ipynb
@@ -217,6 +217,7 @@
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
+    "    m_value\n",
     "    for i in m_values\n",
     "    residual_sum_squares(x_values, y_values, m, b)\n",
     "        "
