--- a/index.ipynb
+++ b/index.ipynb
@@ -217,9 +217,9 @@
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    m_value = []\n",
+    "    rss = []\n",
     "    for i in m_values\n",
-    "    m_valueresidual_sum_squares(x_values, y_values, m, b)\n",
+    "    residual_sum_squares(x_values, y_values, m, b)\n",
     "        "
    ]
   },
