Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
     "def rss_values(x_values, y_values, m_values, b):\n",
     "    rss = []\n",
     "    for i in m_values\n",
-    "    residual_sum_squares(x_values, y_values, m, b)\n",
+    "    rss.append(residual_sum_squares(x_values, y_values, m, b))\n",
     "        "
    ]
   },
