--- a/index.ipynb
+++ b/index.ipynb
@@ -218,8 +218,9 @@
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
     "    rss = []\n",
-    "    for i in m_values\n",
-    "    rss.append(residual_sum_squares(x_values, y_values, m, b))\n",
+    "    for i in m_values:\n",
+    "        rss.append(residual_sum_squares(x_values, y_values, m, b))\n",
+    "        \n",
     "        "
    ]
   },
