--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,7 @@
     "    rss = []\n",
     "    for i in m_values:\n",
     "        rss.append(residual_sum_squares(x_values, y_values, m, b))\n",
-    "    \n",
+    "    return {}\n",
     "        "
    ]
   },
