Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,7 @@
     "    rss = []\n",
     "    for i in m_values:\n",
     "        rss.append(residual_sum_squares(x_values, y_values, m, b))\n",
-    "    return {'m_values': [m_values], rss_va}\n",
+    "    return {'m_values': [m_values], 'rss_values':[rss]}\n",
     "        "
    ]
   },
