--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,7 @@
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    l\n",
+    "    rss = list(map(lam))\n",
     "    return {'m_values': [m_values], 'rss_values':[rss]}\n",
     "        "
    ]
