--- a/index.ipynb
+++ b/index.ipynb
@@ -212,27 +212,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    rss = list(map(lambda x_value: residual_sum_squares(x_values, y_values, m, b)))\n",
+    "    rss = list(map(lambda x_value: residual_sum_squares(x_values, y_values, m, b), x_values))\n",
     "    return {'m_values': [m_values], 'rss_values':[rss]}\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-13-4b60bc7c77b2>, line 4)",
+     "evalue": "invalid syntax (<ipython-input-15-4b60bc7c77b2>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-4b60bc7c77b2>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    scaled_m_values = list(map(lambda x_value: initial_m_value: initial_m_value/10,initial_m_values))\u001b[0m\n\u001b[0m                                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-4b60bc7c77b2>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    scaled_m_values = list(map(lambda x_value: initial_m_value: initial_m_value/10,initial_m_values))\u001b[0m\n\u001b[0m                                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
