--- a/index.ipynb
+++ b/index.ipynb
@@ -212,10 +212,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from error import residual_sum_squares\n",
     "def rss_values(x_values, y_values, m_values, b):\n",
     "    rss = list(map(lambda x_value: residual_sum_squares(x_values, y_values, m, b), x_values))\n",
     "    return {'m_values': [m_values], 'rss_values':[rss]}\n",
