Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,7 @@
     "budgets = list(map(lambda show: show['budget'] ,shows))\n",
     "revenues = list(map(lambda show: show['revenue'] ,shows))\n",
     "initial_m_values = list(range(8, 19, 1))\n",
-    "scaled_m_values = list(map(lambda x_value: initial_m_value: initial_m_value/10,initial_m_values))\n",
+    "scaled_m_values = list(map(lambda  initial_m_value: initial_m_value/10,initial_m_values))\n",
     "b_value = 133.33\n",
     "rss_values(budgets, revenues, scaled_m_values, b_value)\n",
     "\n",
