--- a/index.ipynb
+++ b/index.ipynb
@@ -212,30 +212,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "from error import residual_sum_squares\n",
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    rss = list(map(lambda m_value: residual_sum_squares(x_values, y_values, m_value, b), x_values))\n",
+    "    rss = list(map(lambda m_value: residual_sum_squares(x_values, y_values, m_value, b), m_values))\n",
     "    return {'m_values': [m_values], 'rss_values':[rss]}\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'m_values': [[0.8, 0.9, 1.0, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8]],\n",
-       " 'rss_values': [[2045535164.1667001, 8290701364.1667, 33381033764.166695]]}"
+       " 'rss_values': [[64693.76669999998,\n",
+       "   45559.96669999998,\n",
+       "   30626.166699999987,\n",
+       "   19892.36669999999,\n",
+       "   13358.5667,\n",
+       "   11024.766700000004,\n",
+       "   12890.96670000001,\n",
+       "   18957.166700000016,\n",
+       "   29223.36670000002,\n",
+       "   43689.566700000025,\n",
+       "   62355.76670000004]]}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
