--- a/index.ipynb
+++ b/index.ipynb
@@ -319,9 +319,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "cells": {
+          "align": [
+           "left",
+           "left",
+           "left",
+           "left",
+           "left"
+          ],
+          "fill": {
+           "color": "#EDFAFF"
+          },
+          "line": {
+           "color": "#7D7F80"
+          },
+          "values": [
+           [
+            [
+             0.8,
+             0.9,
+             1,
+             1.1,
+             1.2,
+             1.3,
+             1.4,
+             1.5,
+             1.6,
+             1.7,
+             1.8
+            ]
+           ],
+           [
+            [
+             64693.76669999998,
+             45559.96669999998,
+             30626.166699999987,
+             19892.36669999999,
+             13358.5667,
+             11024.766700000004,
+             12890.96670000001,
+             18957.166700000016,
+             29223.36670000002,
+             43689.566700000025,
+             62355.76670000004
+            ]
+           ]
+          ]
+         },
+         "header": {
+          "align": [
+           "left",
+           "left",
+           "left",
+           "left",
+           "left"
+          ],
+          "fill": {
+           "color": "#a1c3d1"
+          },
+          "line": {
+           "color": "#7D7F80"
+          },
+          "values": [
+           "M values",
+           "RSS values"
+          ]
+         },
+         "type": "table",
+         "uid": "d7d608a2-ad72-11e9-bf47-21411607b06c"
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"f23a23f0-07c5-4d2a-ac9d-e7fef3b096d2\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f23a23f0-07c5-4d2a-ac9d-e7fef3b096d2\", [{\"cells\": {\"align\": [\"left\", \"left\", \"left\", \"left\", \"left\"], \"fill\": {\"color\": \"#EDFAFF\"}, \"line\": {\"color\": \"#7D7F80\"}, \"values\": [[[0.8, 0.9, 1.0, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8]], [[64693.76669999998, 45559.96669999998, 30626.166699999987, 19892.36669999999, 13358.5667, 11024.766700000004, 12890.96670000001, 18957.166700000016, 29223.36670000002, 43689.566700000025, 62355.76670000004]]]}, \"header\": {\"align\": [\"left\", \"left\", \"left\", \"left\", \"left\"], \"fill\": {\"color\": \"#a1c3d1\"}, \"line\": {\"color\": \"#7D7F80\"}, \"values\": [\"M values\", \"RSS values\"]}, \"type\": \"table\", \"uid\": \"d7dab0c8-ad72-11e9-bf47-21411607b06c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"f23a23f0-07c5-4d2a-ac9d-e7fef3b096d2\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f23a23f0-07c5-4d2a-ac9d-e7fef3b096d2\", [{\"cells\": {\"align\": [\"left\", \"left\", \"left\", \"left\", \"left\"], \"fill\": {\"color\": \"#EDFAFF\"}, \"line\": {\"color\": \"#7D7F80\"}, \"values\": [[[0.8, 0.9, 1.0, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8]], [[64693.76669999998, 45559.96669999998, 30626.166699999987, 19892.36669999999, 13358.5667, 11024.766700000004, 12890.96670000001, 18957.166700000016, 29223.36670000002, 43689.566700000025, 62355.76670000004]]]}, \"header\": {\"align\": [\"left\", \"left\", \"left\", \"left\", \"left\"], \"fill\": {\"color\": \"#a1c3d1\"}, \"line\": {\"color\": \"#7D7F80\"}, \"values\": [\"M values\", \"RSS values\"]}, \"type\": \"table\", \"uid\": \"d7dab0c8-ad72-11e9-bf47-21411607b06c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "cost_chart = rss_values(budgets, revenues, scaled_m_values, b_value)\n",
     "if cost_chart: \n",
@@ -338,9 +426,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "d96cd6dc-ad72-11e9-bf47-21411607b06c",
+         "x": [
+          [
+           0.1,
+           0.2,
+           0.3,
+           0.4,
+           0.5,
+           0.6,
+           0.7,
+           0.8,
+           0.9,
+           1,
+           1.1,
+           1.2,
+           1.3,
+           1.4,
+           1.5,
+           1.6,
+           1.7
+          ]
+         ],
+         "y": [
+          [
+           316230.36669999996,
+           267696.56669999997,
+           223362.76669999998,
+           183228.96669999996,
+           147295.16669999994,
+           115561.36669999997,
+           88027.56669999998,
+           64693.76669999998,
+           45559.96669999998,
+           30626.166699999987,
+           19892.36669999999,
+           13358.5667,
+           11024.766700000004,
+           12890.96670000001,
+           18957.166700000016,
+           29223.36670000002,
+           43689.566700000025
+          ]
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"f19fdf81-2152-4136-8827-133c3196b206\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f19fdf81-2152-4136-8827-133c3196b206\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [[0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7]], \"y\": [[316230.36669999996, 267696.56669999997, 223362.76669999998, 183228.96669999996, 147295.16669999994, 115561.36669999997, 88027.56669999998, 64693.76669999998, 45559.96669999998, 30626.166699999987, 19892.36669999999, 13358.5667, 11024.766700000004, 12890.96670000001, 18957.166700000016, 29223.36670000002, 43689.566700000025]], \"type\": \"scatter\", \"uid\": \"d972e7d4-ad72-11e9-bf47-21411607b06c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"f19fdf81-2152-4136-8827-133c3196b206\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f19fdf81-2152-4136-8827-133c3196b206\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [[0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7]], \"y\": [[316230.36669999996, 267696.56669999997, 223362.76669999998, 183228.96669999996, 147295.16669999994, 115561.36669999997, 88027.56669999998, 64693.76669999998, 45559.96669999998, 30626.166699999987, 19892.36669999999, 13358.5667, 11024.766700000004, 12890.96670000001, 18957.166700000016, 29223.36670000002, 43689.566700000025]], \"type\": \"scatter\", \"uid\": \"d972e7d4-ad72-11e9-bf47-21411607b06c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from plotly.offline import iplot, init_notebook_mode\n",
     "init_notebook_mode(connected=True)\n",
@@ -371,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,20 +547,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'m': 0.6, 'slope': -296312.3333330441}"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "slope_at(budgets, revenues, .6, 133.33333333333326)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'m': 1.6, 'slope': 123687.66666691954}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "slope_at(budgets, revenues, 1.6, 133.33333333333326)"
    ]
