Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,7 @@
    "source": [
     "from error import residual_sum_squares\n",
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    rss = list(map(lambda m_value: residual_sum_squares(x_values, y_values, m_value, b), m_values))\n",
+    "    rss_values = list(map(lambda m_value: residual_sum_squares(x_values, y_values, m_value, b), m_values))\n",
     "    return {'m_values': [m_values], 'rss_values':[rss]}\n",
     "        "
    ]
