--- a/index.ipynb
+++ b/index.ipynb
@@ -642,7 +642,7 @@
     "from error import residual_sum_squares\n",
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
-    "    m = -1 *\n",
+    "    m = -1 * cost_curve_slope\n",
     "    pass"
    ]
   },
