Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -643,6 +643,7 @@
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
     "    m = -1 * cost_curve_slope * learning_rate\n",
+    "    print(m)\n",
     "    pass"
    ]
   },
