Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -635,15 +635,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "from error import residual_sum_squares\n",
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
-    "    m = -1 * cost_curve_slope * learning_rate\n",
-    "    print(m)\n",
+    "    m_update = -1 * cost_curve_slope * learning_rate\n",
+    "    print(m_update)\n",
     "    pass"
    ]
   },
