Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -643,7 +643,7 @@
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
     "    m_update = -1 * cost_curve_slope * learning_rate\n",
-    "    print(m_update)\n",
+    "    print(m + m_update)\n",
     "    pass"
    ]
   },
