--- a/index.ipynb
+++ b/index.ipynb
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +643,7 @@
     "\n",
     "def updated_m(m, learning_rate, cost_curve_slope):\n",
     "    m_update = -1 * cost_curve_slope * learning_rate\n",
-    "    print(m + m_update)\n",
+    "    return(m + m_update)\n",
     "    pass"
    ]
   },
@@ -656,17 +656,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-0.16568766666649026\n",
-      "-0.09596766666662006\n",
-      "-0.055647666666791336\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1.3823523333332086"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
