--- a/index.ipynb
+++ b/index.ipynb
@@ -700,7 +700,7 @@
    "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
-    "    list(map(lambda : ))\n",
+    "    list(map(lambda : updated_m(m, learning_rate, cost_curve_slope)))\n",
     "    pass"
    ]
   },
