--- a/index.ipynb
+++ b/index.ipynb
@@ -701,7 +701,7 @@
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    \n",
-    "    current_m =  updated_m(m, learning_rate, cost_curve_slope)))\n",
+    "    current_m = updated_m(m, learning_rate, cost_curve_slope)\n",
     "    pass"
    ]
   },
