Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -700,6 +700,7 @@
    "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
+    "    cost\n",
     "    current_cost_slope =\n",
     "    current_rss\n",
     "    current_m = updated_m(m, learning_rate, cost_curve_slope)\n",
