Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -700,7 +700,8 @@
    "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
-    "    cost\n",
+    "    cost_curve = []\n",
+    "    for i\n",
     "    current_cost_slope =\n",
     "    current_rss\n",
     "    current_m = updated_m(m, learning_rate, cost_curve_slope)\n",
