--- a/index.ipynb
+++ b/index.ipynb
@@ -701,10 +701,10 @@
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    cost_curve = []\n",
-    "    for i\n",
-    "    current_cost_slope =\n",
-    "    current_rss\n",
-    "    current_m = updated_m(m, learning_rate, cost_curve_slope)\n",
+    "    for i in steps\n",
+    "        current_cost_slope =\n",
+    "        current_rss\n",
+    "        current_m = updated_m(m, learning_rate, cost_curve_slope)\n",
     "    pass"
    ]
   },
