--- a/index.ipynb
+++ b/index.ipynb
@@ -703,7 +703,7 @@
     "    cost_curve = []\n",
     "    for i in steps\n",
     "        current_cost_slope =\n",
-    "        current_rss =\n",
+    "        current_rss = residual_sum_squares(x_values, y_values, m, b)\n",
     "        current_m = updated_m(m, learning_rate, cost_curve_slope)\n",
     "    pass"
    ]
