--- a/index.ipynb
+++ b/index.ipynb
@@ -704,7 +704,7 @@
     "    for i in steps\n",
     "        current_cost_slope =\n",
     "        current_rss = residual_sum_squares(x_values, y_values, m, b)\n",
-    "        cost_curve.app\n",
+    "        cost_curve.append()\n",
     "        current_m = updated_m(m, learning_rate, cost_curve_slope)\n",
     "    pass"
    ]
