--- a/index.ipynb
+++ b/index.ipynb
@@ -702,7 +702,7 @@
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    cost_curve = []\n",
     "    for i in steps\n",
-    "        current_cost_slope = slope_at(x_values, y_values, current_m, 133.3333333333332)\n",
+    "        current_cost_slope = slope_at(x_values, y_values, current_m, b) []\n",
     "        current_rss = residual_sum_squares(x_values, y_values, m, b)\n",
     "        cost_curve.append()\n",
     "        current_m = updated_m(m, learning_rate, cost_curve_slope)\n",
