--- a/index.ipynb
+++ b/index.ipynb
@@ -703,7 +703,7 @@
     "    cost_curve = []\n",
     "    for i in range(steps):\n",
     "        current_cost_slope = slope_at(x_values, y_values, current_m, b) ['slope']\n",
-    "        current_rss = residual_sum_squares(x_values, y_values, m, b)\n",
+    "        current_rss = residual_sum_squares(x_values, y_values, current_m, b)\n",
     "        cost_curve.append({'m': current_m, 'rss': current_rss, 'slope': current_cost_slope})\n",
     "        current_m = updated_m(m, learning_rate, cost_curve_slope)\n",
     "    pass"
