--- a/index.ipynb
+++ b/index.ipynb
@@ -695,16 +695,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
-    "    cost_curve = []\n",
+    "    cost_curve_slope = []\n",
     "    for i in range(steps):\n",
     "        current_cost_slope = slope_at(x_values, y_values, current_m, b) ['slope']\n",
     "        current_rss = residual_sum_squares(x_values, y_values, current_m, b)\n",
-    "        cost_curve.append({'m': current_m, 'rss': current_rss, 'slope': current_cost_slope})\n",
+    "        cost_curve_slope.append({'m': current_m, 'rss': current_rss, 'slope': current_cost_slope})\n",
     "        current_m = updated_m(current_m, learning_rate, cost_curve_slope)\n",
     "    pass"
    ]
