Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,6 +706,7 @@
     "        current_rss = residual_sum_squares(x_values, y_values, current_m, b)\n",
     "        cost_curve.append({'m': current_m, 'rss': current_rss, 'slope': current_cost_slope})\n",
     "        current_m = updated_m(current_m, learning_rate, current_cost_slope)\n",
+    "    return cosy_curve\n",
     "    pass"
    ]
   },
